RESOLVED FIXED229439
ANGLE Metal infinities and NaNs generated with incorrect syntax
https://bugs.webkit.org/show_bug.cgi?id=229439
Summary ANGLE Metal infinities and NaNs generated with incorrect syntax
Kimmo Kinnunen
Reported 2021-08-24 02:47:39 PDT
ANGLE Metal infinities and NaNs generated with incorrect syntax 0./0. -> NANnanf 1./0. -> inff
Attachments
Patch (22.29 KB, patch)
2021-08-24 03:10 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-08-24 02:48:39 PDT
Kimmo Kinnunen
Comment 2 2021-08-24 03:10:42 PDT
EWS Watchlist
Comment 3 2021-08-24 03:11:55 PDT
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Kimmo Kinnunen
Comment 4 2021-08-24 03:14:12 PDT
Actually, just NANs are incorrect. For ToT, infs were ok since bug 226953 which caused this regression.
Kenneth Russell
Comment 5 2021-08-24 13:45:55 PDT
+Gregg Tavares as FYI, who's been rediscovering some of these during the upstreaming process.
EWS
Comment 6 2021-08-24 23:04:33 PDT
Committed r281547 (240914@main): <https://commits.webkit.org/240914@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 436272 [details].
Kimmo Kinnunen
Comment 7 2021-08-30 11:13:10 PDT
*** Bug 229508 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.